--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ secrets.txt
 build/
 dist/
 data/
+Lab10/GD462.GeneQuantRPKM.50FN.samplename.resk10.csv
+Lab10/GD462.GeneQuantRPKM.50FN.samplename.resk10.txt
+Lab10/1000G_landmark_genes.csv
+Lab10/1000G_target_genes.csv
+
