Remove large CSV file exceeding 100MB

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Lab15/DataAndProcessing/features_to_rnn.pkl
 Lab15/DataAndProcessing/ground_truth.pkl
 Lab15/DataAndProcessing/wiki_giga_2024_50_MFT20_vectors_seed_123_alpha_0.75_eta_0.075_combined.txt
 
+Lab17/pdb_data_seq.csv
