--- a/.gitignore
+++ b/.gitignore
@@ -14,18 +14,30 @@ secrets.txt
 build/
 dist/
 data/
-<<<<<<< HEAD
-=======
-D-GEX/
->>>>>>> 8dfb3c7 (Update .gitignore to ignore large files)
-Lab10/GD462.GeneQuantRPKM.50FN.samplename.resk10.csv
+
+# Ignore all large files manually
 Lab10/GD462.GeneQuantRPKM.50FN.samplename.resk10.txt
+Lab10/GD462.GeneQuantRPKM.50FN.samplename.resk10.csv
 Lab10/1000G_landmark_genes.csv
 Lab10/1000G_target_genes.csv
 Lab15/DataAndProcessing/captions.txt
-Lab15/DataAndProcessing/Images
+Lab15/DataAndProcessing/Images/
 Lab15/DataAndProcessing/features_to_rnn.pkl
 Lab15/DataAndProcessing/ground_truth.pkl
 Lab15/DataAndProcessing/wiki_giga_2024_50_MFT20_vectors_seed_123_alpha_0.75_eta_0.075_combined.txt
-
 Lab17/pdb_data_seq.csv
+
+# D-GEX files
+D-GEX/GTEx_RNASeq_RPKM_n2921x55993.gctx
+D-GEX/bgedv2_QNORM.gctx
+D-GEX/l1000_n1328098x22268.gctx
+
+# Lab13/Basset large data and models
+Lab13/Basset/data/encode_roadmap.fa
+Lab13/Basset/data/encode_roadmap.bed
+Lab13/Basset/data/genomes/hg19.fa
+Lab13/Basset/data/models/pretrained_model.th
+Lab13/Basset/data/encode_roadmap_act.txt
+
+# CIFAR dataset
+data/cifar-10-python.tar.gz
