add datasets to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ Lab13/Basset/data/encode_roadmap_act.txt
 data/cifar-10-python.tar.gz
 D-GEX/
 Lab13/Basset/
+MNIST/
+Lab17/cafa-6-protein-function-prediction/
